Add sketch as background

--- a/index.html
+++ b/index.html
@@ -1,103 +1,193 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="Data Visualization Designer in Tokyo">
+    <meta name=”description” content="Data Visualization Designer / Engineer">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Kazuki OGIWARA: Personal page" />
-    <meta property="og:description" content="Data Visualization Designer in Tokyo" />
+    <meta property="og:title" content="Portfolio - Kazuki OGIWARA" />
+    <meta property="og:description" content="Data Visualization Designer / Engineer" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_home.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Kazuki OGIWARA: Personal page</title>
-		<link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
+    <title>Portfolio - Kazuki OGIWARA</title>
+		<link rel="stylesheet" href="assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
 	<body>
-		<div id="container">
-		<div id="icons-block">
-			<div id="icons-left">
-				<a href="https://kaz-ogiwara.github.io/" class="pjax">
-					<i class="material-icons" id="icon-home">home</i>
-				</a>
-			</div>
+		<div id="header-block">
 			<div id="icons-right">
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/" class="pjax">Works</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/" class="pjax">Home</a></div>
 				<div class="separator">|</div>
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about.html" class="pjax">About</a></div>
 			</div>
 		</div>
-			<div id="pjax-container">
-        <div id="pjax-content" class="home">
+		<div id="pjax-container">
+        <div id="pjax-content" page="home">
           <div id="title-block">
-            <h1>Kazuki OGIWARA</h1>
-            <h3>Data Visualization Designer in Tokyo</h3>
-            <p class="introduction">Hello, I'm Kazuki OGIWARA and I design data visualizations, infographics, and websites. I'm working as Data Visualization Designer at a news media in Tokyo.</p>
+            <h1>Portfolio - Kazuki OGIWARA</h1>
+            <h3>Data Visualization Designer / Engineer</h3>
           </div>
           <div id="works-block">
-            <section>
-              <div class="works">
-		<div class="work">
-			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_landprices2.png)">
-				<a href="https://kaz-ogiwara.github.io/works/landprices2/description-en.html" class="pjax"></a>
+			<div class="work">
+				<a href="./works/landprices2/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_landprices2.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">March 2019</div>
+					<div class="title">Japan Land Values 3D map</div>
+				</div>
 			</div>
-			<div class="title">Japan Land Values 3D map</div>
-			<div class="date">March 2019</div>
-		</div>
-		<div class="work">
-			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_librarians.png)">
-				<a href="https://kaz-ogiwara.github.io/works/librarians/description-en.html" class="pjax"></a>
+			<div class="work">
+				<a href="./works/librarians/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_librarians.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">January 2019</div>
+					<div class="title">Job Security of Librarians</div>
+				</div>
 			</div>
-			<div class="title">Job Security of Librarians</div>
-			<div class="date">January 2019</div>
-		</div>
-		<div class="work">
-			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_landprices.png)">
-				<a href="https://kaz-ogiwara.github.io/works/landprices/description-en.html" class="pjax"></a>
+			<div class="work">
+				<a href="./works/landprices/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_landprices.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">November 2018</div>
+					<div class="title">Average Land Prices Map of Japanese Municipalities</div>
+				</div>
 			</div>
-			<div class="title">Average Land Prices Map of Japanese Municipalities</div>
-			<div class="date">November 2018</div>
-		</div>
-              </div>
-            </section>
-          </div>
-          <div class="button-block">
-            <a class="button pjax" href="works/">More Works</a>
-          </div>
-          <div id="about-block">
-            <section>
-              <div class="subsection">
-                <span class="strong">Born: </span>1987
-              </div>
-              <div class="subsection">
-                <span class="strong">Nationality: </span>Japanese
-              </div>
-              <div class="subsection">
-                <span class="strong">Alma mater: </span>University of Edinburgh (MSc. Design and Digital Media)
-              </div>
-              <div class="subsection">
-                <span class="strong">Residence: </span>Yokohama, Japan
-              </div>
-              <div class="subsection">
-                <span class="strong">Currently working as: </span>Data Visualization Designer at Toyo Keizai Inc.
-              </div>
-              <div class="subsection">
-                <a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a>
-                <span class="delimiter">|</span>
-                <a href="https://twitter.com/kaz_ogiwara" target="_blank">Twitter</a>
-              </div>
-            </section>
-          </div>
-          <div class="button-block">
-            <a class="button pjax" href="about/">More About</a>
+			<div class="work">
+				<a href="./works/temperature/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_temperature.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">July 2018</div>
+					<div class="title">Summer in Tokyo is Gradually Becoming Hotter and Longer</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/viz4socialgood/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_viz4socialgood.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">July 2018</div>
+					<div class="title">Visualization of Human Trafficking</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/teachers/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_teachers.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">March 2018</div>
+					<div class="title">Schools are depending on part-time teachers</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/jpycoins/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_jpycoins.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">February 2018</div>
+					<div class="title">Just Visualization: Japanese Coins</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/dissolution/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_dissolution.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">November 2017</div>
+					<div class="title">Elections and Dissolutions in The G7</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/trade/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_trade.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">August 2017</div>
+					<div class="title">Material to Product</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/pyramids/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_pyramids.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">July 2017</div>
+					<div class="title">From Uganda to Japan</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/nobelprize/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_nobelprize.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">May 2017</div>
+					<div class="title">Scientists Making a Queue</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/musicxml/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_musicxml.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">April, 2017</div>
+					<div class="title">Music score visualization</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/collisions/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_collisions.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">April, 2017</div>
+					<div class="title">Vehicle collisions in Edinburgh</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/population/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_population.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">9 Apr 2017</div>
+					<div class="title">Population of Japan</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/tourists/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_tourists.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">11 Feb 2017</div>
+					<div class="title">Tourists to Japan</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/earthquakes/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_earthquakes.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">23 Feb 2017</div>
+					<div class="title">Earthquakes on the earth</div>
+				</div>
+			</div>
           </div>
         </div>
+				<div id="loading-message">
+					<p>Loading...</p>
+				</div>
 			</div>
 		</div>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-		<script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
-    <script src="https://kaz-ogiwara.github.io/assets/js/script.min.js"></script>
+		<div id="p5canvas-block"></div>
+    <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.plugins.min.js"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
+		<script type="text/javascript" src="assets/js/jquery.pjax.min.js"></script>
+		<script type="text/javascript" src="assets/js/script.min.js"></script>
+		<script type="text/javascript" src="assets/js/sketch.min.js"></script>
   </body>
 </html>
