--- a/works/jpycoins/description-en.html
+++ b/works/jpycoins/description-en.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -12,26 +12,19 @@
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_jpycoins.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title>Just Visualization: Japanese Coins</title>
-		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/jpycoins/description-amp-en.html">
-		<link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
+		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
 	<body>
-		<div id="container">
-		<div id="icons-block">
-			<div id="icons-left">
-				<a href="https://kaz-ogiwara.github.io/" class="pjax">
-					<i class="material-icons" id="icon-home">home</i>
-				</a>
-			</div>
+		<div id="header-block">
 			<div id="icons-right">
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/" class="pjax">Works</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/" class="pjax">Home</a></div>
 				<div class="separator">|</div>
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about.html" class="pjax">About</a></div>
 			</div>
 		</div>
-			<div id="pjax-container">
-        <div id="pjax-content" class="work-description">
+		<div id="pjax-container">
+        <div id="pjax-content" page="work-description">
           <div id="title-block">
             <div class="date">February 2018</div>
             <h1>Just Visualization: Japanese Coins</h1>
@@ -43,20 +36,28 @@
             </a>
           </div>
           <div id="article-block">
-            <p>This visualization shows the number of coins issued in Japan from 1948 to 2016. By tapping, swiping, clicking or dragging on line chart, you can move the slider and see another year. The slider can also be controlled with the button on the bottom. Numbers just under bars are the detail number of coins issued for that year (unit: 1,000 pcs).</p>
-            <p>The overall design tone is based on music equalizers, with volume-like bars on the upper side and slider with lines on the lower side.</p>
-            <p>This is the first time for me to develop a mobile-first web application: I prioritised design and functionality in mobile, and then adjusted them for tablet and desktop version.</p>
-            <p>While I considered to make the visualization by using only line chart at first, just visualizing with a chart was somehow unimpressive. Thus I added slider and animation, using P5.js.</p>
-            <p>Data source: <a href="https://www.mint.go.jp/eng/coin-eng/eng_number_of_coin_production28.html" target="_blank">Japan Mint</a>.</p>
-            <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
+            <p class="en">This visualization shows the number of coins issued in Japan from 1948 to 2016. By tapping, swiping, clicking or dragging on line chart, you can move the slider and see another year. The slider can also be controlled with the button on the bottom. Numbers just under bars are the detail number of coins issued for that year (unit: 1,000 pcs).</p>
+            <p class="en">The overall design tone is based on music equalizers, with volume-like bars on the upper side and slider with lines on the lower side.</p>
+            <p class="en">This is the first time for me to develop a mobile-first web application: I prioritised design and functionality in mobile, and then adjusted them for tablet and desktop version.</p>
+            <p class="en">While I considered to make the visualization by using only line chart at first, just visualizing with a chart was somehow unimpressive. Thus I added slider and animation, using P5.js.</p>
+            <p class="en">Data source: <a href="https://www.mint.go.jp/eng/coin-eng/eng_number_of_coin_production28.html" target="_blank">Japan Mint</a>.</p>
+            <p class="en">Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
             <p><a class="button" href="./" target="_blank">See the App</a></p>
             <p class="disclaimer">The app may not be available in your system environment.</p>
           </div>
         </div>
+				<div id="loading-message">
+					<p>Loading...</p>
+				</div>
 			</div>
 		</div>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-		<script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
-    <script src="https://kaz-ogiwara.github.io/assets/js/script.min.js"></script>
+		<div id="p5canvas-block"></div>
+    <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.plugins.min.js"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/jquery.pjax.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/script.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/sketch.min.js"></script>
   </body>
 </html>
