--- a/works/landprices2/description-en.html
+++ b/works/landprices2/description-en.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -12,26 +12,19 @@
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_landprices2.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title>Japan Land Values 3D map</title>
-		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/landprices2/description-amp-en.html">
-		<link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
+		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
 	<body>
-		<div id="container">
-		<div id="icons-block">
-			<div id="icons-left">
-				<a href="https://kaz-ogiwara.github.io/" class="pjax">
-					<i class="material-icons" id="icon-home">home</i>
-				</a>
-			</div>
+		<div id="header-block">
 			<div id="icons-right">
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/" class="pjax">Works</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/" class="pjax">Home</a></div>
 				<div class="separator">|</div>
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about.html" class="pjax">About</a></div>
 			</div>
 		</div>
-			<div id="pjax-container">
-        <div id="pjax-content" class="work-description">
+		<div id="pjax-container">
+        <div id="pjax-content" page="work-description">
           <div id="title-block">
             <div class="date">March 2019</div>
             <h1>Japan Land Values 3D map</h1>
@@ -41,18 +34,26 @@
             <img id="eyecatch" src="../../assets/img/eyecatch_landprices2.png">
           </div>
           <div id="article-block">
-            <p>3D map of land prices from 1989, the peak of Japanese real estate bubble, to 2019, the latest, in order to see how land land prices have fluctuated.</p>
-            <p>The land values data in 1989, 1999, 2009, 2018, and 2019 (as of January 1st) was retrieved from Japanese <a href="http://www.land.mlit.go.jp/webland/" target="_blank">The Ministry of Land, Infrastructure, Transport, and Tourism</a> (MLIT). Deck.gl, a WebGL framework provided by UBER was used in order to draw this 3D map. Colors and heights are pre-calculated based on values.</p>
-            <p>Since each point is aggregated every 200 meters, one bar (hexagon) may contain multiple points. In that case, color and height are calculated based on the average price or rate of fluctuation. By tapping or mouse hovering, you can see the detailed information about the point (the nearest transportation facility and the distance, the price or the rate of fluctuation, area, current usage) will be shown. These information is also obtained from MLIT.</p>
-            <p>Top left buttons can rotate camera. You can select a value (latest or comparison with the past) and points (all / residential area / business area). In the comparison map, bar colors are red if increased from the past and blue if decreased. The darker and the taller each bar is, the larger fluctuation the point has experienced.</p>
-            <p>This is a public work. The app and the explanation are at <a href="http://toyokeizai.net/sp/visual/tko/landprices3/en.html" target="_blank">Toyo Keizai Online</a> [English].</p>
-            <p>Languages and libraries: Deck.gl, JavaScript (P5.js, jQuery), SQL (MySQL) and Python for retrieving and handling data</p>
+            <p class="en">3D map of land prices from 1989, the peak of Japanese real estate bubble, to 2019, the latest, in order to see how land land prices have fluctuated.</p>
+            <p class="en">The land values data in 1989, 1999, 2009, 2018, and 2019 (as of January 1st) was retrieved from Japanese <a href="http://www.land.mlit.go.jp/webland/" target="_blank">The Ministry of Land, Infrastructure, Transport, and Tourism</a> (MLIT). Deck.gl, a WebGL framework provided by UBER was used in order to draw this 3D map. Colors and heights are pre-calculated based on values.</p>
+            <p class="en">Since each point is aggregated every 200 meters, one bar (hexagon) may contain multiple points. In that case, color and height are calculated based on the average price or rate of fluctuation. By tapping or mouse hovering, you can see the detailed information about the point (the nearest transportation facility and the distance, the price or the rate of fluctuation, area, current usage) will be shown. These information is also obtained from MLIT.</p>
+            <p class="en">Top left buttons can rotate camera. You can select a value (latest or comparison with the past) and points (all / residential area / business area). In the comparison map, bar colors are red if increased from the past and blue if decreased. The darker and the taller each bar is, the larger fluctuation the point has experienced.</p>
+            <p class="en">This is a public work. The app and the explanation are at <a href="http://toyokeizai.net/sp/visual/tko/landprices3/en.html" target="_blank">Toyo Keizai Online</a> [English].</p>
+            <p class="en">Languages and libraries: Deck.gl, JavaScript (P5.js, jQuery), SQL (MySQL) and Python for retrieving and handling data</p>
           </div>
         </div>
+				<div id="loading-message">
+					<p>Loading...</p>
+				</div>
 			</div>
 		</div>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-		<script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
-    <script src="https://kaz-ogiwara.github.io/assets/js/script.min.js"></script>
+		<div id="p5canvas-block"></div>
+    <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.plugins.min.js"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/jquery.pjax.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/script.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/sketch.min.js"></script>
   </body>
 </html>
