--- a/works/teachers/description-en.html
+++ b/works/teachers/description-en.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -12,26 +12,19 @@
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_teachers.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title>Schools are depending on part-time teachers</title>
-		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/teachers/description-amp-en.html">
-		<link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
+		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
 	<body>
-		<div id="container">
-		<div id="icons-block">
-			<div id="icons-left">
-				<a href="https://kaz-ogiwara.github.io/" class="pjax">
-					<i class="material-icons" id="icon-home">home</i>
-				</a>
-			</div>
+		<div id="header-block">
 			<div id="icons-right">
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/" class="pjax">Works</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/" class="pjax">Home</a></div>
 				<div class="separator">|</div>
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about.html" class="pjax">About</a></div>
 			</div>
 		</div>
-			<div id="pjax-container">
-        <div id="pjax-content" class="work-description">
+		<div id="pjax-container">
+        <div id="pjax-content" page="work-description">
           <div id="title-block">
             <div class="date">March 2018</div>
             <h1>Schools are depending on part-time teachers</h1>
@@ -43,18 +36,26 @@
             </a>
           </div>
           <div id="article-block">
-            <p>This project is about the job security of school teachers. In Japan, most children are enrolled in elementary school for six years (from six to 12 years of age) and in junior high school for three years (from 12 to 15 years of age) for their compulsory education. Traditionally, in these schools, most teachers are employed on a full-time and indefinite basis. However, over the past few decades, an increasing number of teachers have been working part-time - they are not in charge of entire classes, but only teach their chosen subject. The wage of part-time teachers is paid according to the classes they teach, and they are known for their low wages and unstable employment situation.</p>
-            <p>This project illustrates that the proportion of part-time teachers has increased in almost all of Japan’s prefectures (47 administrative divisions) over the past 20 years. Other data visualizations in this project also reveal that this trend is particularly affecting women and that the increase in part-time school teachers is a consequence of the finance deterioration of local governments, who have taken over the burden of the national government.</p>
-            <p>Data source: <a href="http://www.mext.go.jp/b_menu/toukei/chousa01/kihon/1267995.htm" target="_blank">Basic Research on School</a> and <a href="http://www.mext.go.jp/b_menu/toukei/001/index05.htm" target="_blank">Local Educational Expenditure Research</a>, The Ministry of Education, Culture, Sports, Science and Technology.</p>
-            <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
+            <p class="en">This project is about the job security of school teachers. In Japan, most children are enrolled in elementary school for six years (from six to 12 years of age) and in junior high school for three years (from 12 to 15 years of age) for their compulsory education. Traditionally, in these schools, most teachers are employed on a full-time and indefinite basis. However, over the past few decades, an increasing number of teachers have been working part-time - they are not in charge of entire classes, but only teach their chosen subject. The wage of part-time teachers is paid according to the classes they teach, and they are known for their low wages and unstable employment situation.</p>
+            <p class="en">This project illustrates that the proportion of part-time teachers has increased in almost all of Japan’s prefectures (47 administrative divisions) over the past 20 years. Other data visualizations in this project also reveal that this trend is particularly affecting women and that the increase in part-time school teachers is a consequence of the finance deterioration of local governments, who have taken over the burden of the national government.</p>
+            <p class="en">Data source: <a href="http://www.mext.go.jp/b_menu/toukei/chousa01/kihon/1267995.htm" target="_blank">Basic Research on School</a> and <a href="http://www.mext.go.jp/b_menu/toukei/001/index05.htm" target="_blank">Local Educational Expenditure Research</a>, The Ministry of Education, Culture, Sports, Science and Technology.</p>
+            <p class="en">Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
             <p><a class="button" href="./" target="_blank">See the App</a></p>
             <p class="disclaimer">The app may not be available in your system environment.</p>
           </div>
         </div>
+				<div id="loading-message">
+					<p>Loading...</p>
+				</div>
 			</div>
 		</div>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-		<script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
-    <script src="https://kaz-ogiwara.github.io/assets/js/script.min.js"></script>
+		<div id="p5canvas-block"></div>
+    <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.plugins.min.js"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/jquery.pjax.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/script.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/sketch.min.js"></script>
   </body>
 </html>
