--- a/works/trade/description-en.html
+++ b/works/trade/description-en.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -12,26 +12,19 @@
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_trade.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title>Material to Product</title>
-		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/trade/description-amp-en.html">
-		<link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
+		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
 	<body>
-		<div id="container">
-		<div id="icons-block">
-			<div id="icons-left">
-				<a href="https://kaz-ogiwara.github.io/" class="pjax">
-					<i class="material-icons" id="icon-home">home</i>
-				</a>
-			</div>
+		<div id="header-block">
 			<div id="icons-right">
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/works/" class="pjax">Works</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/" class="pjax">Home</a></div>
 				<div class="separator">|</div>
-				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
+				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about.html" class="pjax">About</a></div>
 			</div>
 		</div>
-			<div id="pjax-container">
-        <div id="pjax-content" class="work-description">
+		<div id="pjax-container">
+        <div id="pjax-content" page="work-description">
           <div id="title-block">
             <div class="date">August 2017</div>
             <h1>Material to Product</h1>
@@ -41,16 +34,24 @@
             <img id="eyecatch" src="../../assets/img/eyecatch_trade.png">
           </div>
           <div id="article-block">
-            <p>This visualisation is an animated sankey diagram which describes imports and exports between Japan and other countries. Vertical four bars indicate respectively (from left) countries of import source, imported products, exported products, and countries of export destination. When these bars are hovered on, breakdowns of import / export are shown in the shape of bezier curves. For example, if the top­left section (imports from China) is hovered on, the imported value by goods from China is displayed. The heights of bars and the thickness of curves depend on the value (1,000,000 GBP, converted as 1 GBP = 146 JPY).</p>
-            <p>This work was submitted as a class assignment.</p>
-            <p>Data source: <a href="http://www.customs.go.jp/toukei/info/index_e.htm" target="_blank">Trade Statistics of Japan</a></p>
-            <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
+            <p class="en">This visualisation is an animated sankey diagram which describes imports and exports between Japan and other countries. Vertical four bars indicate respectively (from left) countries of import source, imported products, exported products, and countries of export destination. When these bars are hovered on, breakdowns of import / export are shown in the shape of bezier curves. For example, if the top­left section (imports from China) is hovered on, the imported value by goods from China is displayed. The heights of bars and the thickness of curves depend on the value (1,000,000 GBP, converted as 1 GBP = 146 JPY).</p>
+            <p class="en">This work was submitted as a class assignment.</p>
+            <p class="en">Data source: <a href="http://www.customs.go.jp/toukei/info/index_e.htm" target="_blank">Trade Statistics of Japan</a></p>
+            <p class="en">Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
           </div>
         </div>
+				<div id="loading-message">
+					<p>Loading...</p>
+				</div>
 			</div>
 		</div>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-		<script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
-    <script src="https://kaz-ogiwara.github.io/assets/js/script.min.js"></script>
+		<div id="p5canvas-block"></div>
+    <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.plugins.min.js"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/jquery.pjax.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/script.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/sketch.min.js"></script>
   </body>
 </html>
