--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
           </div>
           <div id="works-block">
 			<div class="work">
+				<a href="./works/passport/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_passport.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">May 2019</div>
+					<div class="title">Visualization of World Passport Power</div>
+				</div>
+			</div>
+			<div class="work">
 				<a href="./works/landprices2/description-en.html" class="pjax">
 					<div data-src="./assets/img/eyecatch_landprices2.png" class="lazy"></div>
 				</a>
